--- a/projeuler/projeuler.fsproj
+++ b/projeuler/projeuler.fsproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
+    <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Library.fs" />
